docs/api/qiskit/0.19/qiskit.aqua.operators.converters.ConverterBase.mdx
---
title: ConverterBase (v0.19)
description: API reference for qiskit.aqua.operators.converters.ConverterBase in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.converters.ConverterBase
---

# ConverterBase

<Class id="qiskit.aqua.operators.converters.ConverterBase" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/operators/converters/converter_base.py" signature="ConverterBase" modifiers="class">
  Converters take an Operator and return a new Operator, generally isomorphic in some way with the first, but with certain desired properties. For example, a converter may accept `CircuitOp` and return a `SummedOp` of `PauliOps` representing the circuit unitary. Converters may not have polynomial space or time scaling in their operations. On the contrary, many converters, such as a `MatrixExpectation` or `MatrixEvolution`, which convert `PauliOps` to `MatrixOps` internally, will require time or space exponential in the number of qubits unless a clever trick is known (such as the use of sparse matrices).

  ## Methods

  <span id="converterbase-convert" />

  ### convert

  <Function id="qiskit.aqua.operators.converters.ConverterBase.convert" signature="ConverterBase.convert(operator)" modifiers="abstract">
    Accept the Operator and return the converted Operator

    **Parameters**

    **operator** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The Operator to convert.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The converted Operator.
  </Function>
</Class>

